update lab1 with new changes

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -20,7 +20,7 @@
     "              [c, 1.0]])\n",
     "p = np.array([[a], \n",
     "              [b]])\n",
-    "\n",
+    "# fff\n",
     "sigma_sq = 1.0 # Константа, що не впливає на положення мінімуму"
    ]
   },
